feat: 优化.gitignore文件并创建GitHub Actions部署工作流

--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,33 @@ out/
 # other files
 /model/
 /data/sift/
+
+# Python specific
+*.pyc
+__pycache__/
+*.pkl
+*.ipynb_checkpoints/
+
+# Data files
+*.csv
+*.xlsx
+*.sqlite
+*.db
+*.jsonl
+
+# IDE specific
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Project specific
+/src/graph_rag/rag_code/annoy_index/
+/src/graph_rag/rag_code/faiss_index/
+/src/ANN_alorithms/*.ipynb
+
+# Build outputs
+/dist/
+/build/
+/out/
