fix: 添加id-token: write权限以修复deploy-pages动作错误

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,8 @@ jobs:
       pages: write
       # 允许检出代码
       contents: read
+      # 允许生成 ID token
+      id-token: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
