fix: Markmap插件配置与使用方式修复

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "devDependencies": {
     "markdown-it-mathjax3": "^4.3.2",
-    "vitepress": "^1.6.4"
+    "mermaid": "^11.12.2",
+    "vitepress": "^1.6.4",
+    "vitepress-plugin-markmap": "^1.0.1",
+    "vitepress-plugin-mermaid": "^2.0.17"
   },
   "engines": {
     "node": ">=18"
